chrome/skin/mac/TabView.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);

/* tabview toolbar button */

@media not all and (min-resolution: 1.1dppx) {
	.tabGroups-icon {
		-moz-image-region: rect(0, 18px, 18px, 0);
	}
	.tabGroups-icon:hover:active:not([disabled="true"]):not([cui-areatype="menu-panel"]) {
		-moz-image-region: rect(18px, 18px, 36px, 0);
	}
	#tabGroups-tabview-button[cui-areatype="menu-panel"],
	toolbarpaletteitem[place="palette"] > #tabGroups-tabview-button {
		-moz-image-region: rect(0, 32px, 32px, 0);
	}
}

@media (min-resolution: 1.1dppx) {
	.tabGroups-icon {
		list-style-image: url(chrome://tabgroups-os/skin/Toolbar@2x.png);
		-moz-image-region: rect(0, 36px, 36px, 0);
	}
	.tabGroups-icon:hover:active:not([disabled="true"]):not([cui-areatype="menu-panel"]) {
		-moz-image-region: rect(36px, 36px, 72px, 0);
	}
	#tabGroups-tabview-button[cui-areatype="menu-panel"],
	toolbarpaletteitem[place="palette"] > #tabGroups-tabview-button {
		-moz-image-region: rect(0, 64px, 64px, 0);
	}

	toolbar[brighttext] #tabGroups-tabview-button {
		list-style-image: url(chrome://tabgroups-os/skin/Toolbar-inverted@2x.png);
	}
}

:-moz-any(toolbar, .widget-overflow-list) #tabGroups-tabview-button > .toolbarbutton-icon {
	max-width: 18px;
	margin: 0;
}

